[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/right panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/left panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://panel container.gd" type="Script" id=3]
[ext_resource path="res://options.gd" type="Script" id=4]
[ext_resource path="res://graphics/white.png" type="Texture" id=5]
[ext_resource path="res://scenes/inputs/integer_input.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/inputs/dropdown_input.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/inputs/region selector.tscn" type="PackedScene" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top panel" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="region selector" parent="VBoxContainer/top panel" instance=ExtResource( 8 )]

[node name="panel container" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_panel" parent="VBoxContainer/panel container" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 566.0

[node name="right_panel" parent="VBoxContainer/panel container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 304.0
margin_right = 1024.0
margin_bottom = 566.0

[node name="options" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="options"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2

[node name="option fields" type="VBoxContainer" parent="options"]
margin_right = 377.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="options/option fields"]
margin_right = 404.0
margin_bottom = 20.0
text = "Close options"

[node name="search length" parent="options/option fields" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 404.0
margin_bottom = 44.0
label = "Minimum search length"

[node name="search display" parent="options/option fields" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 404.0
margin_bottom = 68.0
label = "Search display"

[node name="search mode" parent="options/option fields" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 404.0
margin_bottom = 92.0
label = "Search display"
[connection signal="open_options" from="VBoxContainer/panel container/right_panel" to="options" method="_on_right_panel_open_options"]
[connection signal="pressed" from="options/option fields/Button" to="options" method="_on_Button_pressed"]
[connection signal="content_change" from="options/option fields/search length" to="options" method="_on_search_length_content_change"]
[connection signal="content_change" from="options/option fields/search display" to="options" method="_on_search_display_content_change"]
[connection signal="content_change" from="options/option fields/search mode" to="options" method="_on_search_mode_content_change"]
